# potato

./: .gitignore  CITATION.cff  GetDevice.py  README.md  apply_ripple.py  apply_ripple_mps.py  apply_ripple_on_xy_chip.py  chipper.py  demo.py  everything.py  get-color.py  pyproject.toml  requirements.txt  synthetic.py  tm.py  train.py  train_mps.py
ancillary-data/cids/: README.md  allow-list.csv  ratings.csv
ancillary-data/fake-chips/: reflectances.csv
docs/: README.md  cli.md  concepts.md  credits.md  features.md  personal.md  quickstart.md
model/: ripple.py
potato/: augmentations.py  color.py  losses.py  model.py  util.py
ripple/: augmentations.py  color.py  losses.py  mma_loss.py  model.py  util.py
sessions/: latest.pt
sessions/principled/: 70-gen.pt  70-opt.pt
sessions/unprincipled/: 456-gen.pt  456-opt.pt
sessions/yukon-gold/: 49-gen.pt  49-opt.pt
src/potato/: augmentations.py  cli.py  color.py  errors.py  losses.py  model.py  training.py  util.py
src/potato.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_augmentations.py  test_color.py  test_losses.py  test_model.py  test_utils.py
tools/: vectorscope.py
tools/accept-list/: README.md  allow-list.txt  ratings.csv
weights/: space_heater-gen-0.pt  space_heater-gen-12.pt  space_heater-gen-319.pt  space_heater-gen-479.pt  space_heater-gen-50.pt  space_heater-gen-96.pt  space_heater-gen-99.pt  space_heater-opt-0.pt  space_heater-opt-12.pt  space_heater-opt-319.pt  space_heater-opt-50.pt  space_heater-opt-96.pt  space_heater-opt-99.pt
(+29 files in other folders)
