[project]
name = "potato"
version = "1.0.0-beta"
dependencies = [
	"pyproj",
	"torch==2.7.1",
	"tqdm",
	"einops",
	"rasterio[s3]",
	"aim",
	"pytest"
]
requires-python = ">=3.10,<3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
potato = "potato.cli:cli"

[tool.pylint.TYPECHECK]
signature-mutators = [
	"click.decorators.option",
	"click.decorators.argument"
]
disable = [
	"non-ascii-name",
	"non-ascii-module-import"
]

[tool.ruff]
lint.select = ["D", "E", "F", "I", "B"]
